Fix dark theme toggle on mobiles

--- a/themes/infection/source/css/_dark-theme.styl
+++ b/themes/infection/source/css/_dark-theme.styl
@@ -9,6 +9,12 @@ $dark-codebg = #161618
 $dark-code-text = #ff9e64
 
 // Theme toggle button styles
+#theme-toggle
+  display inline-block
+  padding 10px
+  margin -10px
+  cursor pointer
+
 .theme-icon
   display inline-block
   width 20px
